
Slick 8.x-1.0-dev, 2016-12-18
-----------------------------
- Added SlickEntityFormatterBase.php for base ER without field details.
- A few cleanups: TWIG indentation, descriptions, default settings.

Slick 8.x-1.0-dev, 2016-12-09
-----------------------------
- Fixed for the new Optimized option consequences.
- Fixed for edgeFriction when it is integer, no longer double.
- Improved message for slick_requirements().
- Deprecated theme_slick_image() for theme_blazy() to reduce function calls.

Slick 8.x-1.0-dev, 2016-12-06
-----------------------------
- Converted the rest of Simpletest methods into PHPUnit's.
- Fixed for coding standards.
- Ported Optimized option to clean out defaults from the stored settings.
- Added tests.

Slick 8.x-1.0-dev, 2016-11-29
-----------------------------
- Marked it Beta5.
- A few cleanups.

Slick 8.x-1.0-dev, 2016-11-26
-----------------------------
- Fixed for broken iframes when Aspect ratio is not provided.

Slick 8.x-1.0-dev, 2016-11-21
-----------------------------
- Split lightbox gallery identifier into Grid wrapper, if provided.

Slick 8.x-1.0-dev, 2016-11-17
-----------------------------
- Removed the no-longer needed SlickFormatter::getMediaSwitch() overrides as
  slick colorbox is using blazy colorbox.

Slick 8.x-1.0-dev, 2016-11-14
-----------------------------
- Fixed for colorbox regression with the recent JS move into Blazy.

Slick 8.x-1.0-dev, 2016-11-09
-----------------------------
- A few cleanups.
- Fixed for the new Grid and CSS3 Columns at field formatter settings not saved.

Slick 8.x-1.0-dev, 2016-11-01
-----------------------------
- Simplified settings.arrow.attributes to arrow_attributes.
- Simplified settings.downArrow.attributes to arrow_down_attributes.

Slick 8.x-1.0-dev, 2016-10-31
-----------------------------
- Added support for Blazy new CSS3 Columns along with Grid Foundation.
- Moved "the failsafe for deleted optionset while being used" outside Slick.php